use hutool generate random user_name, duration and distance.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,4 +56,6 @@ dependencies {
 
     // optional - Paging 3 Integration
     implementation "androidx.room:room-paging:$room_version"
+
+    implementation 'cn.hutool:hutool-all:5.7.16'
 }
