--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,4 +60,6 @@ dependencies {
     implementation 'cn.hutool:hutool-all:5.7.16'
     implementation 'com.rabbitmq:amqp-client:5.16.0'
     implementation 'org.apache.commons:commons-lang3:3.12.0'
+
+    implementation 'com.github.ybq:Android-SpinKit:1.4.0'
 }
